[package]
name = "mnist_classifier"
version = "0.1.0"
authors = ["chrism"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
mnist = "0.4"
rand = "0.7"
ndarray-rand = "0.11.0"
ndarray-stats = "0.3"
minifb = "0.17"